// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`proxyfill Babel plugin should not transform direct function calls 1`] = `
"import * as _proxyfillRuntime from 'proxyfill/runtime.mjs'
var Proxy = _proxyfillRuntime.Proxy,
	_proxyfillRuntime$get = _proxyfillRuntime.get,
	_proxyfillRuntime$set = _proxyfillRuntime.set,
	_proxyfillRuntime$invoke = _proxyfillRuntime.invoke,
	_proxyfillRuntime$has = _proxyfillRuntime.has
bar()
"
`;

exports[`proxyfill Babel plugin should transform computed getters 1`] = `
"import * as _proxyfillRuntime from 'proxyfill/runtime.mjs'
var Proxy = _proxyfillRuntime.Proxy,
	_proxyfillRuntime$get = _proxyfillRuntime.get,
	_proxyfillRuntime$set = _proxyfillRuntime.set,
	_proxyfillRuntime$invoke = _proxyfillRuntime.invoke,
	_proxyfillRuntime$has = _proxyfillRuntime.has

_proxyfillRuntime$get(foo, 0)

_proxyfillRuntime$get(foo, bar)

_proxyfillRuntime$get(foo, _proxyfillRuntime$get(bar, 'baz'))
"
`;

exports[`proxyfill Babel plugin should transform computed setters 1`] = `
"import * as _proxyfillRuntime from 'proxyfill/runtime.mjs'
var Proxy = _proxyfillRuntime.Proxy,
	_proxyfillRuntime$get = _proxyfillRuntime.get,
	_proxyfillRuntime$set = _proxyfillRuntime.set,
	_proxyfillRuntime$invoke = _proxyfillRuntime.invoke,
	_proxyfillRuntime$has = _proxyfillRuntime.has

_proxyfillRuntime$set(foo, 0, 42)

_proxyfillRuntime$set(foo, bar, 42)

_proxyfillRuntime$set(foo, _proxyfillRuntime$get(bar, 'baz'), 42)
"
`;

exports[`proxyfill Babel plugin should transform getters 1`] = `
"import * as _proxyfillRuntime from 'proxyfill/runtime.mjs'
var Proxy = _proxyfillRuntime.Proxy,
	_proxyfillRuntime$get = _proxyfillRuntime.get,
	_proxyfillRuntime$set = _proxyfillRuntime.set,
	_proxyfillRuntime$invoke = _proxyfillRuntime.invoke,
	_proxyfillRuntime$has = _proxyfillRuntime.has

_proxyfillRuntime$get(foo, 'bar')
"
`;

exports[`proxyfill Babel plugin should transform in operator usage 1`] = `
"import * as _proxyfillRuntime from 'proxyfill/runtime.mjs'
var Proxy = _proxyfillRuntime.Proxy,
	_proxyfillRuntime$get = _proxyfillRuntime.get,
	_proxyfillRuntime$set = _proxyfillRuntime.set,
	_proxyfillRuntime$invoke = _proxyfillRuntime.invoke,
	_proxyfillRuntime$has = _proxyfillRuntime.has

_proxyfillRuntime$has(foo, bar)

_proxyfillRuntime$has('foo', bar)
"
`;

exports[`proxyfill Babel plugin should transform method calls 1`] = `
"import * as _proxyfillRuntime from 'proxyfill/runtime.mjs'
var Proxy = _proxyfillRuntime.Proxy,
	_proxyfillRuntime$get = _proxyfillRuntime.get,
	_proxyfillRuntime$set = _proxyfillRuntime.set,
	_proxyfillRuntime$invoke = _proxyfillRuntime.invoke,
	_proxyfillRuntime$has = _proxyfillRuntime.has

_proxyfillRuntime$invoke(foo, 'bar', [])
"
`;

exports[`proxyfill Babel plugin should transform setters 1`] = `
"import * as _proxyfillRuntime from 'proxyfill/runtime.mjs'
var Proxy = _proxyfillRuntime.Proxy,
	_proxyfillRuntime$get = _proxyfillRuntime.get,
	_proxyfillRuntime$set = _proxyfillRuntime.set,
	_proxyfillRuntime$invoke = _proxyfillRuntime.invoke,
	_proxyfillRuntime$has = _proxyfillRuntime.has

_proxyfillRuntime$set(foo, 'bar', 42)
"
`;
